kube-manifests/05-NginxApp1/03-Ingress-with-ExternalDNS.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxapp1-ingress-service
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/cookie-based-affinity: "true"
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: "origin"
    appgw.ingress.kubernetes.io/backend-protocol: "http"
spec:
  rules:
    - host: eapp1.kubeoncloud.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-clusterip-service
                port: 
                  number: 80
