kube-manifests/05-NginxApp1/04-AGICIngress-with-ExternalDNS.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syntheticapi
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/cluster-issuer: letsencrypt-application-gateway
    cert-manager.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - syntheticapi.baborbird.com
    secretName: tls-secret
  rules:
  - host: syntheticapi.baborbird.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: syntheticapi
            port:
              number: 80

# https://github.com/paolosalvatori/aks-multi-tenant-agic/blob/main/scripts/ingress.yml
